@@ -341,7 +341,7 @@ int EvseRapiProcessor::processCmd()
 	char *s = tokens[3];
 	u4.i = strlen(s);
 	for (u3.i=0;u3.i < u4.i;u3.i++) {
-	  if (*s == 0x01) *s = ' ';
+	  if (*s == 0xef) *s = ' ';
 	  s++;
 	}
 	g_OBD.LcdPrint(u1.u,u2.u,tokens[3]);
